[project]
name = "repl-nix-workspace"
run = "python main.py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "pydantic>=2.12.5",
    "sift-stack-py>=0.12.0",
    "uvicorn[standard]>=0.42.0",
]
